--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <link rel="stylesheet" href="css/tailwind/tailwind.min.css">
     <link rel="stylesheet" href="css/loader.css">
     <link rel="icon" type="image/png" sizes="32x32" href="atis-assets/logo/ulbi/logo PP ULBI.png">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="js/main.js"></script>
     <script src="./js/loader.js"></script>
     <script src="./js/cihuy.js" type="module"></script>
     <script src="./js/admin.js" type="module"></script>
     <script src="./js/cookie.js" type="module"></script>
+    <script src="./js/wauth.js"></script>
 
 
 </head>
